<resources>
    <string name="app_name">Maistas ir aš</string>
    <string name="recipeName">Recepto pavadinimas</string>
    <string name="method">Preparation method</string>
    <string name="recipe">Recipe</string>
    <string name="ingredients">Recipe Ingredients</string>
    <string name="submit">Išsaugoti</string>
    <string name="cancel">Atšaukti</string>
    <string name="add_recipe">Pridėti receptą</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>